--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,9 @@
+html,
 body {
-  background-color: red;
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+    padding: 0;
+    margin: 0;
 }
